--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;padding: 0;
+
 }
 /* titolo */
 .container-titolo {
@@ -8,20 +9,21 @@ body {
     font-size: 7vw;
 
     border-radius: 20px;
-    height: 40vw;
+    height: 15vh;
     width: 90vw;
     margin-left: 5vw;
     margin-top: 5vw;
 
     box-shadow: 0px 0px 15px 3px rgba(0, 0, 0, 0.1);
 
-    padding-top: 0.5vw;
+    
     
 
 }
 
 h1 {
     text-align: center;
+
     margin-bottom: -8vw;
     font-weight: 600;
     color: #FF6D6D;
@@ -49,7 +51,7 @@ span.primaparte {
     font-size: 7vw;
 
     border-radius: 20px;
-    height: 120vw;
+    height: 50vh;
     width: 90vw;
     margin-left: 5vw;
     margin-top: 5vw;
@@ -57,6 +59,81 @@ span.primaparte {
     box-shadow: 0px 0px 15px 3px rgba(0, 0, 0, 0.1);
 
 
+}
+
+#titoloPunta {
+    padding-left: 3vw;
+    padding-top: 2vw;
+    font-size: 8vw;
+}
+
+.numero, .pari, .dispari {
+    margin-left: 5vw;
+    vertical-align: top;
+    margin-top: 1vw;
+
+}
+
+.numero {
+    margin-top: -8vw;
+}
+
+
+
+input[type='checkbox'] {
+    width: 10vw;
+    height: 10vw;
+    transform: scale(1.3);
+    vertical-align: middle;
+}
+
+label {
+    display: inline;
+}
+
+input[type='number'] {
+    width: 40vw;
+    height: 5vw;
+    margin-top: 5vw;
+    border-radius: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    margin-left: 3vw;
+}
+
+.label-input {
+    margin-left: 5vw;
+}
+
+#res {
+    font-size: 6vw;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.5);
+
+}
+
+.bottone-punta {
+    width: 50vw;
+    height: 13vw;
+    border-radius: 25px;
+    border: 2px solid #000000;
+    background-color: #FF6D6D;
+    color: #000000;
+    font-size: 7vw;
+    font-weight: 600;
+
+}
+
+.bottone-punta:hover {
+    width: 52vw;
+    height: 15vw;
+    margin-top: -1vw;
+    font-size: 9vw;
+    transition: 0.2s;
+}
+
+.bottone {
+    display: flex;
+    justify-content: center;
 }
 
 
@@ -67,10 +144,34 @@ span.primaparte {
     font-size: 7vw;
 
     border-radius: 20px;
-    height: 60vw;
+    height: 15vh;
     width: 90vw;
     margin-left: 5vw;
     margin-top: 5vw;
 
     box-shadow: 0px 0px 15px 3px rgba(0, 0, 0, 0.1);
+}
+
+.numero-estratto {
+    padding-top: 3vw;
+    font-size: 7vw;
+    text-align: center;
+}
+
+#estrazione {
+    font-size: 9vw;
+    text-align: center;
+    font-weight: 400;
+    margin-top: -5vw;
+}
+
+#esito {
+    font-size: 6vw;
+    text-align: center;
+    font-weight: 600;
+    margin-top: -5vw;
+}
+
+.impostazioni {
+    margin-left: 3vw;
 }
