--- a/stylebackup.css
+++ b/stylebackup.css
@@ -48,7 +48,7 @@ span.primaparte {
 .container-puntata {
     background-color: white;
     font-family: Helvetica;
-    font-size: 5vw;
+    font-size: 7vw;
 
     border-radius: 20px;
     height: 50vh;
@@ -65,28 +65,26 @@ span.primaparte {
     padding-left: 3vw;
     padding-top: 2vw;
     font-size: 8vw;
-    display: none;
 }
 
 .numero, .pari, .dispari {
     margin-left: 5vw;
     vertical-align: top;
-    margin-top: vw;
+    margin-top: 1vw;
 
 }
 
 .numero {
-    padding-top: 7vw;
+    margin-top: -8vw;
 }
 
 
 
 input[type='checkbox'] {
-    width: 7vw;
-    height: 7vw;
-    /*transform: scale(1.3);*/
+    width: 10vw;
+    height: 10vw;
+    transform: scale(1.3);
     vertical-align: middle;
-    margin-right: 3vw;
 }
 
 label {
@@ -95,13 +93,11 @@ label {
 
 input[type='number'] {
     width: 40vw;
-    height: 10vw;
+    height: 5vw;
     margin-top: 5vw;
     border-radius: 5px;
     border: 1px solid rgba(0, 0, 0, 0.2);
     margin-left: 3vw;
-    vertical-align: middle;
-    font-size: 4vw;
 }
 
 .label-input {
@@ -109,7 +105,7 @@ input[type='number'] {
 }
 
 #res {
-    font-size: 4vw;
+    font-size: 6vw;
     text-align: center;
     color: rgba(0, 0, 0, 0.5);
 
@@ -127,7 +123,13 @@ input[type='number'] {
 
 }
 
-
+.bottone-punta:hover {
+    width: 52vw;
+    height: 15vw;
+    margin-top: -1vw;
+    font-size: 9vw;
+    transition: 0.2s;
+}
 
 .bottone {
     display: flex;
@@ -139,7 +141,7 @@ input[type='number'] {
 .container-estrazione {
     background-color: white;
     font-family: Helvetica;
-    font-size: 5vw;
+    font-size: 7vw;
 
     border-radius: 20px;
     height: 15vh;
@@ -152,7 +154,7 @@ input[type='number'] {
 
 .numero-estratto {
     padding-top: 3vw;
-    font-size: 5vw;
+    font-size: 7vw;
     text-align: center;
 }
 
@@ -164,7 +166,7 @@ input[type='number'] {
 }
 
 #esito {
-    font-size: 5vw;
+    font-size: 6vw;
     text-align: center;
     font-weight: 600;
     margin-top: -5vw;
